--- a/iec.html
+++ b/iec.html
@@ -325,7 +325,7 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Resistansi Konduktor IEC</div>
+    <div class="title-main">Kalkulator Resistansi Konduktor IEC v2</div>
     <div class="divider"></div>
 
     <div class="form-row">
