--- a/iec.html
+++ b/iec.html
@@ -2,7 +2,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=480, initial-scale=1.0"/>
+  <!-- Perbaiki viewport agar responsive dan tidak nge-zoom -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kalkulator Resistansi Konduktor IEC</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
@@ -325,7 +326,7 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Resistansi Konduktor IEC v2</div>
+    <div class="title-main">Kalkulator Resistansi Konduktor IEC v3</div>
     <div class="divider"></div>
 
     <div class="form-row">
