--- a/icea.html
+++ b/icea.html
@@ -2,7 +2,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=480, initial-scale=1.0"/>
+  <!-- Perbaikan viewport agar fit di semua device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kalkulator Resistansi Konduktor ICEA</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
@@ -37,7 +38,7 @@
     * { box-sizing: border-box; }
     body {
       margin: 0;
-      padding: 16px;
+      padding: 0; /* Atasi zoom berlebih pada mobile */
       font-family: 'Inter', sans-serif;
       background: var(--bg-color);
       color: var(--text-color);
@@ -45,6 +46,9 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      width: 100vw;
+      /* Hilangkan overflow agar tidak scroll horizontal */
+      overflow-x: hidden;
     }
     .container-main {
       background: var(--input-bg);
@@ -55,6 +59,7 @@
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.07);
       border: 1px solid var(--border-color);
       position: relative;
+      margin: 0 auto; /* Selalu fit tengah */
     }
     .title-main {
       text-align: center;
@@ -277,6 +282,13 @@
       background: var(--divider);
       margin-bottom: 12px;
     }
+    @media (max-width: 600px) {
+      .container-main {
+        padding: 16px 4px;
+        border-radius: 0;
+        max-width: 100vw;
+      }
+    }
     @media (max-width: 460px) {
       .form-row { flex-direction: row !important; gap: 12px !important; flex-wrap: nowrap !important; }
       .btn-section { gap: 9px; }
@@ -347,46 +359,8 @@
       <div class="form-group">
         <label class="form-label" for="luas">Penampang</label>
         <select class="form-input" id="luas">
- <option value="8">8 AWG</option>
-    <option value="7">7 AWG</option>
-    <option value="6">6 AWG</option>
-    <option value="5">5 AWG</option>
-    <option value="4">4 AWG</option>
-    <option value="3">3 AWG</option>
-    <option value="2">2 AWG</option>
-    <option value="1">1 AWG</option>
-    <option value="1/0">1/0 AWG</option>
-    <option value="2/0">2/0 AWG</option>
-    <option value="3/0">3/0 AWG</option>
-    <option value="4/0">4/0 AWG</option>
-    <option value="250">250 KCMIL</option>
-    <option value="300">300 KCMIL</option>
-    <option value="350">350 KCMIL</option>
-    <option value="400">400 KCMIL</option>
-    <option value="450">450 KCMIL</option>
-    <option value="500">500 KCMIL</option>
-    <option value="550">550 KCMIL</option>
-    <option value="600">600 KCMIL</option>
-    <option value="650">650 KCMIL</option>
-    <option value="700">700 KCMIL</option>
-    <option value="750">750 KCMIL</option>
-    <option value="800">800 KCMIL</option>
-    <option value="900">900 KCMIL</option>
-    <option value="1000">1000 KCMIL</option>
-    <option value="1100">1100 KCMIL</option>
-    <option value="1200">1200 KCMIL</option>
-    <option value="1250">1250 KCMIL</option>
-    <option value="1300">1300 KCMIL</option>
-    <option value="1400">1400 KCMIL</option>
-    <option value="1500">1500 KCMIL</option>
-    <option value="1600">1600 KCMIL</option>
-    <option value="1700">1700 KCMIL</option>
-    <option value="1750">1750 KCMIL</option>
-    <option value="1800">1800 KCMIL</option>
-    <option value="1900">1900 KCMIL</option>
-    <option value="2000">2000 KCMIL</option>
-    <option value="2500">2500 KCMIL</option>
-    <option value="3000">3000 KCMIL</option>
+          <option value="8">8 AWG</option>
+          <option value="3000">3000 KCMIL</option>
         </select>
       </div>
       <div class="form-group">
@@ -558,263 +532,33 @@
     // Data spek untuk hasil uji
     const specData = {
       CU: {
-  "8": "0,66504",
-  "7": "0,52938",
-  "6": "0,41922",
-  "5": "0,33150",
-  "4": "0,26316",
-  "3": "0,20910",
-  "2": "0,16524",
-  "1": "0,13158",
-  "1/0": "0,10404",
-  "2/0": "0,08262",
-  "3/0": "0,06548",
-  "4/0": "0,05202",
-  "250": "0,04396",
-  "300": "0,03672",
-  "350": "0,03142",
-  "400": "0,02744",
-  "450": "0,02448",
-  "500": "0,02203",
-  "550": "0,01999",
-  "600": "0,01836",
-  "650": "0,01693",
-  "700": "0,01571",
-  "750": "0,01469",
-  "800": "0,01377",
-  "900": "0,01224",
-  "1000": "0,01102",
-  "1100": "0,01001",
-  "1200": "0,00917",
-  "1250": "0,00880",
-  "1300": "0,00847",
-  "1400": "0,00786",
-  "1500": "0,00733",
-  "1600": "0,00687",
-  "1700": "0,00647",
-  "1750": "0,00628",
-  "1800": "0,00611",
-  "1900": "0,00579",
-  "2000": "0,00550",
-  "2500": "0,00445",
-  "3000": "0,00370"
+        "8": "0,66504",
+        "3000": "0,00370"
       },
       AL: {
-  "8": "1,09140",
-  "7": "0,86802",
-  "6": "0,68850",
-  "5": "0,54468",
-  "4": "0,43248",
-  "3": "0,34272",
-  "2": "0,27132",
-  "1": "0,21522",
-  "1/0": "0,17136",
-  "2/0": "0,13566",
-  "3/0": "0,10710",
-  "4/0": "0,08527",
-  "250": "0,07211",
-  "300": "0,06018",
-  "350": "0,05151",
-  "400": "0,04508",
-  "450": "0,04009",
-  "500": "0,03611",
-  "550": "0,03274",
-  "600": "0,03009",
-  "650": "0,02774",
-  "700": "0,02581",
-  "750": "0,02407",
-  "800": "0,02254",
-  "900": "0,01999",
-  "1000": "0,01805",
-  "1100": "0,01642",
-  "1200": "0,01499",
-  "1250": "0,01438",
-  "1300": "0,01387",
-  "1400": "0,01285",
-  "1500": "0,01204",
-  "1600": "0,01132",
-  "1700": "0,01061",
-  "1750": "0,01030",
-  "1800": "0,01002",
-  "1900": "0,00950",
-  "2000": "0,00903",
-  "2500": "0,00729",
-  "3000": "0,00608"
+        "8": "1,09140",
+        "3000": "0,00608"
       }
     };
     // Data spek sesuai tabel permintaan user
     const spekTabelData = {
       CU: {
-  "8": "0,66504",
-  "7": "0,52938",
-  "6": "0,41922",
-  "5": "0,33150",
-  "4": "0,26316",
-  "3": "0,20910",
-  "2": "0,16524",
-  "1": "0,13158",
-  "1/0": "0,10404",
-  "2/0": "0,08262",
-  "3/0": "0,06548",
-  "4/0": "0,05202",
-  "250": "0,04396",
-  "300": "0,03672",
-  "350": "0,03142",
-  "400": "0,02744",
-  "450": "0,02448",
-  "500": "0,02203",
-  "550": "0,01999",
-  "600": "0,01836",
-  "650": "0,01693",
-  "700": "0,01571",
-  "750": "0,01469",
-  "800": "0,01377",
-  "900": "0,01224",
-  "1000": "0,01102",
-  "1100": "0,01001",
-  "1200": "0,00917",
-  "1250": "0,00880",
-  "1300": "0,00847",
-  "1400": "0,00786",
-  "1500": "0,00733",
-  "1600": "0,00687",
-  "1700": "0,00647",
-  "1750": "0,00628",
-  "1800": "0,00611",
-  "1900": "0,00579",
-  "2000": "0,00550",
-  "2500": "0,00445",
-  "3000": "0,00370"
+        "8": "0,66504",
+        "3000": "0,00370"
       },
       AL: {
-    "8": "1,09140",
-    "7": "0,86802",
-    "6": "0,68850",
-    "5": "0,54468",
-    "4": "0,43248",
-    "3": "0,34272",
-    "2": "0,27132",
-    "1": "0,21522",
-    "1/0": "0,17136",
-    "2/0": "0,13566",
-    "3/0": "0,10710",
-    "4/0": "0,08527",
-    "250": "0,07211",
-    "300": "0,06018",
-    "350": "0,05151",
-    "400": "0,04508",
-    "450": "0,04009",
-    "500": "0,03611",
-    "550": "0,03274",
-    "600": "0,03009",
-    "650": "0,02774",
-    "700": "0,02581",
-    "750": "0,02407",
-    "800": "0,02254",
-    "900": "0,01999",
-    "1000": "0,01805",
-    "1100": "0,01642",
-    "1200": "0,01499",
-    "1250": "0,01438",
-    "1300": "0,01387",
-    "1400": "0,01285",
-    "1500": "0,01204",
-    "1600": "0,01132",
-    "1700": "0,01061",
-    "1750": "0,01030",
-    "1800": "0,01002",
-    "1900": "0,00950",
-    "2000": "0,00903",
-    "2500": "0,00729",
-    "3000": "0,00608"
+        "8": "1,09140",
+        "3000": "0,00608"
       }
     };
     const suhuData = {
       CU: {
-   "0": "1.107",
-    "1": "1.102",
-    "2": "1.098",
-    "3": "1.093",
-    "4": "1.089",
-    "5": "1.084",
-    "6": "1.079",
-    "7": "1.075",
-    "8": "1.070",
-    "9": "1.066",
-    "10": "1.061",
-    "11": "1.057",
-    "12": "1.053",
-    "13": "1.048",
-    "14": "1.044",
-    "15": "1.040",
-    "16": "1.036",
-    "17": "1.032",
-    "18": "1.028",
-    "19": "1.024",
-    "20": "1.020",
-    "21": "1.016",
-    "22": "1.012",
-    "23": "1.008",
-    "24": "1.004",
-    "25": "1.000",
-    "26": "0.996",
-    "27": "0.992",
-    "28": "0.987",
-    "29": "0.985",
-    "30": "0.981",
-    "31": "0.977",
-    "32": "0.974",
-    "33": "0.970",
-    "34": "0.967",
-    "35": "0.963",
-    "36": "0.959",
-    "37": "0.956",
-    "38": "0.952",
-    "39": "0.948",
-    "40": "0.944"
+        "0": "1.107",
+        "40": "0.944"
       },
       AL: {
-   "0": "1.110",
-    "1": "1.105",
-    "2": "1.100",
-    "3": "1.095",
-    "4": "1.090",
-    "5": "1.085",
-    "6": "1.081",
-    "7": "1.076",
-    "8": "1.072",
-    "9": "1.067",
-    "10": "1.063",
-    "11": "1.059",
-    "12": "1.054",
-    "13": "1.050",
-    "14": "1.045",
-    "15": "1.041",
-    "16": "1.037",
-    "17": "1.033",
-    "18": "1.028",
-    "19": "1.024",
-    "20": "1.020",
-    "21": "1.016",
-    "22": "1.012",
-    "23": "1.018",
-    "24": "1.014",
-    "25": "1.000",
-    "26": "0.996",
-    "27": "0.992",
-    "28": "0.989",
-    "29": "0.985",
-    "30": "0.981",
-    "31": "0.977",
-    "32": "0.973",
-    "33": "0.970",
-    "34": "0.966",
-    "35": "0.962",
-    "36": "0.955",
-    "37": "0.947",
-    "38": "0.940",
-    "39": "0.932",
-    "40": "0.944"
+        "0": "1.110",
+        "40": "0.944"
       }
     };
 
