--- a/icea.html
+++ b/icea.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <!-- Perbaikan viewport agar fit di semua device -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kalkulator Resistansi Konduktor ICEA</title>
+  <title>Kalkulator Resistansi Konduktor ICEA v9</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -323,7 +323,7 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Resistansi Konduktor ICEA</div>
+    <div class="title-main">Kalkulator Resistansi Konduktor ICEA v9</div>
     <div class="divider"></div>
 
     <div class="form-row">
