--- a/icea.html
+++ b/icea.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kalkulator Resistansi Konduktor ICEA v11</title>
+  <title>Kalkulator Resistansi Konduktor ICEA v12</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -59,7 +59,8 @@
       border: 1px solid var(--border-color);
       position: relative;
       margin: 0 auto;
-      /* Tambah jarak kiri-kanan default */
+      margin-left: 24px;
+      margin-right: 24px;
     }
     .title-main {
       text-align: center;
@@ -290,6 +291,8 @@
       .container-main {
         border-radius: 10px;
         max-width: 100vw;
+        margin-left: 10px;
+        margin-right: 10px;
       }
     }
     @media (max-width: 460px) {
@@ -320,6 +323,8 @@
         box-shadow: none;
         padding: 0;
         max-width: 100%;
+        margin-left: 0;
+        margin-right: 0;
       }
       .divider {
         display: none;
@@ -329,7 +334,7 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Resistansi Konduktor ICEA v11</div>
+    <div class="title-main">Kalkulator Resistansi Konduktor ICEA v12</div>
     <div class="divider"></div>
 
     <div class="form-row">
