--- a/iec.html
+++ b/iec.html
@@ -2,9 +2,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <!-- Perbaiki viewport agar responsive dan tidak nge-zoom -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kalkulator Resistansi Konduktor IEC</title>
+  <title>Kalkulator Resistansi Konduktor ICEA v12</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -196,8 +195,6 @@
       margin-bottom: 3px;
       display: block;
     }
-
-    /* --- BUTTONS GRID --- */
     .btn-section {
       margin-top: 32px;
       margin-bottom: 0;
@@ -284,7 +281,6 @@
       background: var(--divider);
       margin-bottom: 12px;
     }
-
     @media (max-width: 480px) {
       .container-main {
         max-width: 99vw;
@@ -303,7 +299,6 @@
       .info-area-gap { height: 16px; }
       .title-main { font-size: 1.1rem; }
     }
-
     @media print {
       body {
         background: white !important;
@@ -326,26 +321,18 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Resistansi Konduktor IEC v3</div>
+    <div class="title-main">Kalkulator Resistansi Konduktor ICEA v12</div>
     <div class="divider"></div>
-
     <div class="form-row">
       <div class="form-group">
-        <label class="form-label" for="alat">Pembacaan Alat</label>
-        <div style="display: flex; gap: 8px;">
-          <input type="text" class="form-input" id="alat" style="flex:1;" inputmode="decimal" pattern="[0-9]*" />
-          <select class="form-input" id="alat-satuan" style="width:auto;">
-            <option value="mohm">mΩ</option>
-            <option value="ohm">Ω</option>
-          </select>
-        </div>
+        <label class="form-label" for="alat">Pembacaan Alat (Ω)</label>
+        <input type="text" class="form-input" id="alat" style="flex:1;" inputmode="decimal" pattern="[0-9]*" />
       </div>
       <div class="form-group">
-        <label class="form-label" for="panjang">Panjang (Meter)</label>
+        <label class="form-label" for="panjang">Panjang (Feet)</label>
         <input type="text" class="form-input" id="panjang" inputmode="decimal" pattern="[0-9]*" />
       </div>
     </div>
-
     <div class="form-row">
       <div class="form-group">
         <label class="form-label" for="suhu">Suhu (°C)</label>
@@ -356,26 +343,19 @@
         <input type="text" class="form-input" id="faktor" readonly />
       </div>
     </div>
-
     <div class="form-row">
       <div class="form-group">
         <label class="form-label" for="bahan">Konduktor</label>
         <select class="form-input" id="bahan">
           <option value="CU">CU</option>
           <option value="AL">AL</option>
-          <option value="TCU">TCU</option>
         </select>
       </div>
       <div class="form-group">
         <label class="form-label" for="luas">Penampang</label>
         <select class="form-input" id="luas">
-          <option value="0.5">0,5 mm²</option>
-          <option value="0.75">0,75 mm²</option>
-          <option value="1.0">1,0 mm²</option>
-          <option value="1.5">1,5 mm²</option>
-          <option value="2.5">2,5 mm²</option>
-          <option value="4">4 mm²</option>
-          <option value="300">300 mm²</option>
+          <option value="8">8 AWG</option>
+          <option value="3000">3000 KCMIL</option>
         </select>
       </div>
       <div class="form-group">
@@ -383,13 +363,10 @@
         <input type="text" class="form-input" id="spesifikasi" readonly />
       </div>
     </div>
-
     <div class="result-box" id="hasil">
       <div id="hasil-nilai"></div>
       <div id="hasil-status"></div>
     </div>
-
-    <!-- Button Section in Grid Layout -->
     <div class="btn-section" id="btnSection">
       <div class="btn-row1">
         <button class="main-btn" id="btn-iec">Spek. IEC</button>
@@ -403,47 +380,22 @@
       <div class="btn-row3">
         <div class="right-actions">
           <button class="icon-btn" id="toggleMode" title="Toggle Dark/Light" aria-label="Toggle Dark/Light">
-            <span id="toggleIcon">
-              <svg id="icon-sun" width="22" height="22" viewBox="0 0 22 22" fill="none">
-                <circle cx="11" cy="11" r="5" stroke="currentColor" stroke-width="2"/>
-                <g stroke="currentColor" stroke-width="2">
-                  <line x1="11" y1="2" x2="11" y2="5"/>
-                  <line x1="11" y1="17" x2="11" y2="20"/>
-                  <line x1="2" y1="11" x2="5" y2="11"/>
-                  <line x1="17" y1="11" x2="20" y2="11"/>
-                  <line x1="5.22" y1="5.22" x2="7.07" y2="7.07"/>
-                  <line x1="14.93" y1="14.93" x2="16.78" y2="16.78"/>
-                  <line x1="16.78" y1="5.22" x2="14.93" y2="7.07"/>
-                  <line x1="7.07" y1="14.93" x2="5.22" y2="16.78"/>
-                </g>
-              </svg>
-            </span>
+            <span id="toggleIcon"></span>
           </button>
         </div>
         <button class="main-btn" id="btn-laporan">Laporan</button>
         <div class="right-actions">
           <span id="infoArea" class="info-area compact" tabindex="0" aria-label="Tampilkan informasi aplikasi" title="Informasi">
-            <span class="info-icon" id="infoIcon">
-              <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
-                <circle cx="11" cy="11" r="10" stroke="currentColor" stroke-width="2"/>
-                <rect x="10" y="10" width="2" height="7" rx="1" fill="currentColor"/>
-                <rect x="10" y="6" width="2" height="2" rx="1" fill="currentColor"/>
-              </svg>
-            </span>
+            <span class="info-icon" id="infoIcon"></span>
           </span>
         </div>
       </div>
     </div>
-    <!-- END Button Section -->
-
     <div class="info-area-gap" id="infoAreaGap" style="display:none;"></div>
     <div id="infoAreaExpandedContainer"></div>
-
     <div class="footer-main">Made by Williyanto Adi 2025</div>
   </div>
-
   <script>
-    // Membatasi input hanya angka & titik/koma di kolom pembacaan alat, panjang dan suhu
     function onlyNumberInput(el) {
       el.addEventListener('input', function() {
         let val = el.value;
@@ -476,7 +428,7 @@
         </span>
         <span class="info-text">
           <strong>Tentang aplikasi ini</strong>
-          Ini adalah aplikasi untuk menghitung nilai resistansi pada konduktor Tembaga (CU), Aluminium (AL), Tembaga yang dilapisi Timah (TCU) dengan suhu dan panjang.
+          Ini adalah aplikasi untuk menghitung nilai resistansi pada konduktor Tembaga (CU), Aluminium (AL) dengan suhu dan panjang.
         </span>
       </div>
     `;
@@ -486,7 +438,6 @@
         infoAreaGap.style.display = "block";
         infoAreaExpandedContainer.innerHTML = infoContent;
         infoExpanded = true;
-        // Event untuk collapse
         const icon = document.getElementById("infoIconExpanded");
         const area = document.getElementById("infoAreaExpanded");
         icon.addEventListener("click", collapseInfoArea);
@@ -514,8 +465,6 @@
         expandInfoArea();
       }
     });
-
-    // Accessibility: focus style for info icon
     infoArea.addEventListener("focus", function() {
       infoArea.style.outline = "2px solid var(--info-color)";
     });
@@ -528,7 +477,6 @@
     const toggleIcon = document.getElementById("toggleIcon");
     function setThemeIcon(isDark) {
       if (isDark) {
-        // Moon icon
         toggleIcon.innerHTML = `
           <svg id="icon-moon" width="22" height="22" viewBox="0 0 22 22" fill="none">
             <path d="M17.5 14.7A7.01 7.01 0 0 1 7.3 4.5c0-.3-.3-.5-.6-.4A9 9 0 1 0 18 18c.2-.3-.1-.6-.5-.6z"
@@ -536,7 +484,6 @@
           </svg>
         `;
       } else {
-        // Sun icon
         toggleIcon.innerHTML = `
           <svg id="icon-sun" width="22" height="22" viewBox="0 0 22 22" fill="none">
             <circle cx="11" cy="11" r="5" stroke="currentColor" stroke-width="2"/>
@@ -560,7 +507,7 @@
     });
     setThemeIcon(document.body.classList.contains('dark'));
 
-    // Data & Kalkulasi
+    // Kalkulasi & Data ICEA v11
     const bahanEl = document.getElementById('bahan');
     const luasEl = document.getElementById('luas');
     const spesifikasiEl = document.getElementById('spesifikasi');
@@ -570,56 +517,33 @@
     const hasilStatus = document.getElementById("hasil-status");
     const hasilEl = document.getElementById("hasil");
     const alatEl = document.getElementById("alat");
-    const alatSatuanEl = document.getElementById("alat-satuan");
-
     let laporanPengujian = [];
 
+    // Data ICEA v11
     const specData = {
-      CU: { 
-        "0.5": "36,0", "0.75": "24,5", "1.0": "18,1", "1.5": "12,1", "2.5": "7,41", "4": "4,61",
-        "300": "0.0601"
-      },
-      AL: { 
-        "0.5": "-", "0.75": "-", "1.0": "-", "1.5": "-", "2.5": "-", "4": "-", 
-        "300": "0.100"
-      },
-      TCU: { 
-        "0.5": "36,7", "0.75": "24,8", "1.0": "18,2", "1.5": "12,2", "2.5": "7,56", "4": "4,70",
-        "300": "0.0607"
-      }
-    };
-
-    const suhuData = {
       CU: {
-        21: "0,9961",
-        21.1: "0.9957",
-        22: "0,9922",
-        23: "0,9883",
-        24: "0,9845",
-        25: "0,9807"
-      },
-      TCU: {
-        21: "0,9961",
-        21.1: "0.9957",
-        22: "0,9922",
-        23: "0,9883",
-        24: "0,9845",
-        25: "0,9807"
+        "8": "0,66504",
+        "3000": "0,00370"
       },
       AL: {
-        21: "0.9960",
-        21.1: "0.9956",
-        22: "0.9920",
-        23: "0.9880",
-        24: "0.9841",
-        25: "0.9802"
+        "8": "1,09140",
+        "3000": "0,00608"
+      }
+    };
+    const suhuData = {
+      CU: {
+        "0": "1.107",
+        "40": "0.944"
+      },
+      AL: {
+        "0": "1.110",
+        "40": "0.944"
       }
     };
 
     function getLuasValue() {
       return luasEl.options[luasEl.selectedIndex].value;
     }
-
     function getGreeting(now) {
       const jam = now.getHours();
       const menit = now.getMinutes();
@@ -630,14 +554,12 @@
       if (totalMenit >= 1080 && totalMenit <= 1439) return "Selamat Malam,";
       return "";
     }
-
     function updateSpec() {
       const bahan = bahanEl.value;
       const luas = getLuasValue();
       spesifikasiEl.value = specData[bahan]?.[luas] || "";
       hitungHasil();
     }
-
     function updateFaktor() {
       const bahan = bahanEl.value;
       const suhuValue = suhuEl.value.replace(",", ".").trim();
@@ -655,14 +577,12 @@
       faktorEl.value = faktor;
       hitungHasil();
     }
-
     function isInputLengkap() {
       return alatEl.value.trim() !== "" &&
         document.getElementById("panjang").value.trim() !== "" &&
         suhuEl.value.trim() !== "" &&
         faktorEl.value.trim() !== "";
     }
-
     function showGreetingHint() {
       const now = new Date();
       const greeting = getGreeting(now);
@@ -674,14 +594,9 @@
       hasilNilai.textContent = "";
       hasilEl.style.color = "inherit";
     }
-
     function hitungHasil() {
       let alatValue = alatEl.value.replace(",", ".");
       let alatNumber = parseFloat(alatValue);
-      let satuan = alatSatuanEl.value;
-      if (satuan === "ohm" && !isNaN(alatNumber)) {
-        alatNumber = alatNumber * 1000;
-      }
       const panjang = parseFloat(document.getElementById("panjang").value.replace(",", "."));
       const faktor = parseFloat(faktorEl.value.replace(",", "."));
       const bahan = bahanEl.value;
@@ -693,11 +608,9 @@
         showGreetingHint();
         return;
       }
-
-      if (!isNaN(alatNumber) && !isNaN(panjang) && !isNaN(faktor) && panjang !== 0 && faktor !== 0) {
-        const hasil = alatNumber / (panjang * faktor);
-        hasilNilai.textContent = hasil.toFixed(4) + " Ω/km";
-
+      if (!isNaN(alatNumber) && !isNaN(panjang) && !isNaN(faktor) && panjang !== 0) {
+        const hasil = alatNumber / panjang * faktor;
+        hasilNilai.textContent = hasil.toFixed(5) + " Ω/feet";
         if (!isNaN(spec)) {
           if (hasil < spec) {
             hasilEl.style.color = "green";
@@ -717,10 +630,8 @@
         showGreetingHint();
       }
     }
-
     function simpanPengujian() {
       const alat = alatEl.value || "-";
-      const alatSatuan = alatSatuanEl.options[alatSatuanEl.selectedIndex].text || "mΩ";
       const panjang = document.getElementById("panjang").value || "-";
       const suhu = suhuEl.value || "-";
       const faktor = faktorEl.value || "-";
@@ -733,15 +644,13 @@
       const jamPengujian = now.toLocaleTimeString('id-ID', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
       const tanggalPengujian = now.toLocaleDateString('id-ID');
       laporanPengujian.push({
-        alat, alatSatuan, panjang, suhu, faktor, bahan, luas, spesifikasi, hasil, status,
+        alat, panjang, suhu, faktor, bahan, luas, spesifikasi, hasil, status,
         tanggal: tanggalPengujian,
         jam: jamPengujian
       });
       alert("Pengujian berhasil disimpan ke laporan!");
     }
-
     document.getElementById("btn-simpan").addEventListener("click", simpanPengujian);
-
     bahanEl.addEventListener('change', () => {
       updateSpec();
       updateFaktor();
@@ -749,25 +658,21 @@
     luasEl.addEventListener('change', updateSpec);
     suhuEl.addEventListener('input', updateFaktor);
     alatEl.addEventListener("input", hitungHasil);
-    alatSatuanEl.addEventListener("change", hitungHasil);
     document.getElementById("panjang").addEventListener("input", hitungHasil);
-
     document.getElementById("btn-laporan").addEventListener("click", () => {
       if (laporanPengujian.length === 0) {
         alert("Belum ada pengujian yang disimpan dalam laporan.");
         return;
       }
-
       let isiLaporan = `Laporan Perhitungan Resistansi Konduktor\n`;
       isiLaporan += `Total Pengujian: ${laporanPengujian.length}\n\n`;
-
       laporanPengujian.forEach((uji, idx) => {
         isiLaporan += `--- Pengujian ke-${idx+1} ---\n`;
         isiLaporan += `Tanggal: ${uji.tanggal}\n`;
         isiLaporan += `Jam   : ${uji.jam}\n\n`;
         isiLaporan += `Input:\n`;
-        isiLaporan += `- Pembacaan Alat: ${uji.alat} ${uji.alatSatuan}\n`;
-        isiLaporan += `- Panjang (Meter): ${uji.panjang}\n`;
+        isiLaporan += `- Pembacaan Alat: ${uji.alat} Ω\n`;
+        isiLaporan += `- Panjang (Feet): ${uji.panjang}\n`;
         isiLaporan += `- Suhu (°C): ${uji.suhu}\n`;
         isiLaporan += `- Faktor Koreksi Suhu: ${uji.faktor}\n\n`;
         isiLaporan += `Data Konduktor:\n`;
@@ -775,10 +680,9 @@
         isiLaporan += `- Penampang: ${uji.luas}\n`;
         isiLaporan += `- Spesifikasi Standar: ${uji.spesifikasi}\n\n`;
         isiLaporan += `Hasil Perhitungan:\n`;
-        isiLaporan += `- Resistansi (Ω/km): ${uji.hasil}\n`;
+        isiLaporan += `- Resistansi (Ω/feet): ${uji.hasil}\n`;
         isiLaporan += `- Status Pengujian: ${uji.status}\n\n`;
       });
-
       const blob = new Blob([isiLaporan], {type: "text/plain"});
       const link = document.createElement("a");
       link.href = URL.createObjectURL(blob);
@@ -788,7 +692,6 @@
       document.body.removeChild(link);
       URL.revokeObjectURL(link.href);
     });
-
     document.getElementById("btn-iec").addEventListener("click", function() {
       window.location.href = "https://google.com";
     });
@@ -801,10 +704,9 @@
     document.getElementById("btn-spln").addEventListener("click", function() {
       window.location.href = "https://github.com";
     });
-
     window.addEventListener('DOMContentLoaded', () => {
       bahanEl.value = "CU";
-      luasEl.value = "0.5";
+      luasEl.value = "8";
       updateSpec();
       updateFaktor();
       alatEl.focus();
