--- a/iec.html
+++ b/iec.html
@@ -2,8 +2,9 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=480, initial-scale=1.0"/>
-  <title>Kalkulator Resistansi Konduktor ICEA</title>
+  <!-- Perbaiki viewport agar responsive dan tidak nge-zoom -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Kalkulator Resistansi Konduktor IEC v3</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -37,14 +38,14 @@
     * { box-sizing: border-box; }
     body {
       margin: 0;
-      padding: 16px;
+      padding: 0;
       font-family: 'Inter', sans-serif;
       background: var(--bg-color);
       color: var(--text-color);
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
     }
     .container-main {
       background: var(--input-bg);
@@ -55,6 +56,10 @@
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.07);
       border: 1px solid var(--border-color);
       position: relative;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     .title-main {
       text-align: center;
@@ -191,6 +196,8 @@
       margin-bottom: 3px;
       display: block;
     }
+
+    /* --- BUTTONS GRID --- */
     .btn-section {
       margin-top: 32px;
       margin-bottom: 0;
@@ -277,7 +284,13 @@
       background: var(--divider);
       margin-bottom: 12px;
     }
-    @media (max-width: 460px) {
+
+    @media (max-width: 480px) {
+      .container-main {
+        max-width: 99vw;
+        padding: 20px 4vw;
+        border-radius: 8px;
+      }
       .form-row { flex-direction: row !important; gap: 12px !important; flex-wrap: nowrap !important; }
       .btn-section { gap: 9px; }
       .btn-row1, .btn-row2, .btn-row3 { gap: 9px; flex-wrap: wrap; justify-content: center !important; }
@@ -288,7 +301,9 @@
       .info-area { padding: 10px 7px 10px 8px; }
       .info-area.compact { min-width: 28px; }
       .info-area-gap { height: 16px; }
+      .title-main { font-size: 1.1rem; }
     }
+
     @media print {
       body {
         background: white !important;
@@ -311,16 +326,22 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Resistansi Konduktor ICEA</div>
+    <div class="title-main">Kalkulator Resistansi Konduktor IEC</div>
     <div class="divider"></div>
 
     <div class="form-row">
       <div class="form-group">
-        <label class="form-label" for="alat">Pembacaan Alat (Ω)</label>
-        <input type="text" class="form-input" id="alat" style="flex:1;" inputmode="decimal" pattern="[0-9]*" />
+        <label class="form-label" for="alat">Pembacaan Alat</label>
+        <div style="display: flex; gap: 8px;">
+          <input type="text" class="form-input" id="alat" style="flex:1;" inputmode="decimal" pattern="[0-9]*" />
+          <select class="form-input" id="alat-satuan" style="width:auto;">
+            <option value="mohm">mΩ</option>
+            <option value="ohm">Ω</option>
+          </select>
+        </div>
       </div>
       <div class="form-group">
-        <label class="form-label" for="panjang">Panjang (Feet)</label>
+        <label class="form-label" for="panjang">Panjang (Meter)</label>
         <input type="text" class="form-input" id="panjang" inputmode="decimal" pattern="[0-9]*" />
       </div>
     </div>
@@ -342,13 +363,19 @@
         <select class="form-input" id="bahan">
           <option value="CU">CU</option>
           <option value="AL">AL</option>
+          <option value="TCU">TCU</option>
         </select>
       </div>
       <div class="form-group">
         <label class="form-label" for="luas">Penampang</label>
         <select class="form-input" id="luas">
-    <option value="8">8 AWG</option>
-    <option value="3000">3000 KCMIL</option>
+          <option value="0.5">0,5 mm²</option>
+          <option value="0.75">0,75 mm²</option>
+          <option value="1.0">1,0 mm²</option>
+          <option value="1.5">1,5 mm²</option>
+          <option value="2.5">2,5 mm²</option>
+          <option value="4">4 mm²</option>
+          <option value="300">300 mm²</option>
         </select>
       </div>
       <div class="form-group">
@@ -361,8 +388,8 @@
       <div id="hasil-nilai"></div>
       <div id="hasil-status"></div>
     </div>
-    <div id="hasil-spek-tabel" style="font-style:italic; margin-top:6px;"></div>
 
+    <!-- Button Section in Grid Layout -->
     <div class="btn-section" id="btnSection">
       <div class="btn-row1">
         <button class="main-btn" id="btn-iec">Spek. IEC</button>
@@ -376,23 +403,47 @@
       <div class="btn-row3">
         <div class="right-actions">
           <button class="icon-btn" id="toggleMode" title="Toggle Dark/Light" aria-label="Toggle Dark/Light">
-            <span id="toggleIcon"></span>
+            <span id="toggleIcon">
+              <svg id="icon-sun" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                <circle cx="11" cy="11" r="5" stroke="currentColor" stroke-width="2"/>
+                <g stroke="currentColor" stroke-width="2">
+                  <line x1="11" y1="2" x2="11" y2="5"/>
+                  <line x1="11" y1="17" x2="11" y2="20"/>
+                  <line x1="2" y1="11" x2="5" y2="11"/>
+                  <line x1="17" y1="11" x2="20" y2="11"/>
+                  <line x1="5.22" y1="5.22" x2="7.07" y2="7.07"/>
+                  <line x1="14.93" y1="14.93" x2="16.78" y2="16.78"/>
+                  <line x1="16.78" y1="5.22" x2="14.93" y2="7.07"/>
+                  <line x1="7.07" y1="14.93" x2="5.22" y2="16.78"/>
+                </g>
+              </svg>
+            </span>
           </button>
         </div>
         <button class="main-btn" id="btn-laporan">Laporan</button>
         <div class="right-actions">
           <span id="infoArea" class="info-area compact" tabindex="0" aria-label="Tampilkan informasi aplikasi" title="Informasi">
-            <span class="info-icon" id="infoIcon"></span>
+            <span class="info-icon" id="infoIcon">
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
+                <circle cx="11" cy="11" r="10" stroke="currentColor" stroke-width="2"/>
+                <rect x="10" y="10" width="2" height="7" rx="1" fill="currentColor"/>
+                <rect x="10" y="6" width="2" height="2" rx="1" fill="currentColor"/>
+              </svg>
+            </span>
           </span>
         </div>
       </div>
     </div>
+    <!-- END Button Section -->
+
     <div class="info-area-gap" id="infoAreaGap" style="display:none;"></div>
     <div id="infoAreaExpandedContainer"></div>
+
     <div class="footer-main">Made by Williyanto Adi 2025</div>
   </div>
 
   <script>
+    // Membatasi input hanya angka & titik/koma di kolom pembacaan alat, panjang dan suhu
     function onlyNumberInput(el) {
       el.addEventListener('input', function() {
         let val = el.value;
@@ -425,7 +476,7 @@
         </span>
         <span class="info-text">
           <strong>Tentang aplikasi ini</strong>
-          Ini adalah aplikasi untuk menghitung nilai resistansi pada konduktor Tembaga (CU), Aluminium (AL) dengan suhu dan panjang.
+          Ini adalah aplikasi untuk menghitung nilai resistansi pada konduktor Tembaga (CU), Aluminium (AL), Tembaga yang dilapisi Timah (TCU) dengan suhu dan panjang.
         </span>
       </div>
     `;
@@ -435,6 +486,7 @@
         infoAreaGap.style.display = "block";
         infoAreaExpandedContainer.innerHTML = infoContent;
         infoExpanded = true;
+        // Event untuk collapse
         const icon = document.getElementById("infoIconExpanded");
         const area = document.getElementById("infoAreaExpanded");
         icon.addEventListener("click", collapseInfoArea);
@@ -462,6 +514,8 @@
         expandInfoArea();
       }
     });
+
+    // Accessibility: focus style for info icon
     infoArea.addEventListener("focus", function() {
       infoArea.style.outline = "2px solid var(--info-color)";
     });
@@ -474,6 +528,7 @@
     const toggleIcon = document.getElementById("toggleIcon");
     function setThemeIcon(isDark) {
       if (isDark) {
+        // Moon icon
         toggleIcon.innerHTML = `
           <svg id="icon-moon" width="22" height="22" viewBox="0 0 22 22" fill="none">
             <path d="M17.5 14.7A7.01 7.01 0 0 1 7.3 4.5c0-.3-.3-.5-.6-.4A9 9 0 1 0 18 18c.2-.3-.1-.6-.5-.6z"
@@ -481,6 +536,7 @@
           </svg>
         `;
       } else {
+        // Sun icon
         toggleIcon.innerHTML = `
           <svg id="icon-sun" width="22" height="22" viewBox="0 0 22 22" fill="none">
             <circle cx="11" cy="11" r="5" stroke="currentColor" stroke-width="2"/>
@@ -514,39 +570,49 @@
     const hasilStatus = document.getElementById("hasil-status");
     const hasilEl = document.getElementById("hasil");
     const alatEl = document.getElementById("alat");
+    const alatSatuanEl = document.getElementById("alat-satuan");
 
     let laporanPengujian = [];
 
-    // Data spek untuk hasil uji
     const specData = {
-      CU: {
-  "8": "0,66504",
-  "3000": "0,00370"
+      CU: { 
+        "0.5": "36,0", "0.75": "24,5", "1.0": "18,1", "1.5": "12,1", "2.5": "7,41", "4": "4,61",
+        "300": "0.0601"
       },
-      AL: {
-  "8": "1,09140",
-  "3000": "0,00608"
+      AL: { 
+        "0.5": "-", "0.75": "-", "1.0": "-", "1.5": "-", "2.5": "-", "4": "-", 
+        "300": "0.100"
+      },
+      TCU: { 
+        "0.5": "36,7", "0.75": "24,8", "1.0": "18,2", "1.5": "12,2", "2.5": "7,56", "4": "4,70",
+        "300": "0.0607"
       }
     };
-    // Data spek sesuai tabel permintaan user
-    const spekTabelData = {
-      CU: {
-  "8": "0,66504",
-  "3000": "0,00370"
-      },
-      AL: {
-    "8": "1,09140",
-    "3000": "0,00608"
-      }
-    };
+
     const suhuData = {
       CU: {
-    "0": "1.107",
-    "40": "0.944"
+        21: "0,9961",
+        21.1: "0.9957",
+        22: "0,9922",
+        23: "0,9883",
+        24: "0,9845",
+        25: "0,9807"
+      },
+      TCU: {
+        21: "0,9961",
+        21.1: "0.9957",
+        22: "0,9922",
+        23: "0,9883",
+        24: "0,9845",
+        25: "0,9807"
       },
       AL: {
-    "0": "1.110",
-    "40": "0.944"
+        21: "0.9960",
+        21.1: "0.9956",
+        22: "0.9920",
+        23: "0.9880",
+        24: "0.9841",
+        25: "0.9802"
       }
     };
 
@@ -609,10 +675,13 @@
       hasilEl.style.color = "inherit";
     }
 
-    // LOGIKA REVISI: hasil = pembacaan alat / panjang * faktor koreksi suhu
     function hitungHasil() {
       let alatValue = alatEl.value.replace(",", ".");
       let alatNumber = parseFloat(alatValue);
+      let satuan = alatSatuanEl.value;
+      if (satuan === "ohm" && !isNaN(alatNumber)) {
+        alatNumber = alatNumber * 1000;
+      }
       const panjang = parseFloat(document.getElementById("panjang").value.replace(",", "."));
       const faktor = parseFloat(faktorEl.value.replace(",", "."));
       const bahan = bahanEl.value;
@@ -624,9 +693,10 @@
         showGreetingHint();
         return;
       }
-      if (!isNaN(alatNumber) && !isNaN(panjang) && !isNaN(faktor) && panjang !== 0) {
-        const hasil = alatNumber / panjang * faktor;
-        hasilNilai.textContent = hasil.toFixed(5) + " Ω/feet";
+
+      if (!isNaN(alatNumber) && !isNaN(panjang) && !isNaN(faktor) && panjang !== 0 && faktor !== 0) {
+        const hasil = alatNumber / (panjang * faktor);
+        hasilNilai.textContent = hasil.toFixed(4) + " Ω/km";
 
         if (!isNaN(spec)) {
           if (hasil < spec) {
@@ -648,20 +718,9 @@
       }
     }
 
-    function updateSpekTabel() {
-      const bahan = bahanEl.value;
-      const luas = getLuasValue();
-      const spekTabel = spekTabelData[bahan]?.[luas];
-      const hasilSpekTabel = document.getElementById("hasil-spek-tabel");
-      if (spekTabel) {
-        hasilSpekTabel.textContent = `Spek sesuai tabel : ${spekTabel} Ω/feet`;
-      } else {
-        hasilSpekTabel.textContent = "";
-      }
-    }
-
     function simpanPengujian() {
       const alat = alatEl.value || "-";
+      const alatSatuan = alatSatuanEl.options[alatSatuanEl.selectedIndex].text || "mΩ";
       const panjang = document.getElementById("panjang").value || "-";
       const suhu = suhuEl.value || "-";
       const faktor = faktorEl.value || "-";
@@ -674,7 +733,7 @@
       const jamPengujian = now.toLocaleTimeString('id-ID', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
       const tanggalPengujian = now.toLocaleDateString('id-ID');
       laporanPengujian.push({
-        alat, panjang, suhu, faktor, bahan, luas, spesifikasi, hasil, status,
+        alat, alatSatuan, panjang, suhu, faktor, bahan, luas, spesifikasi, hasil, status,
         tanggal: tanggalPengujian,
         jam: jamPengujian
       });
@@ -686,14 +745,11 @@
     bahanEl.addEventListener('change', () => {
       updateSpec();
       updateFaktor();
-      updateSpekTabel();
     });
-    luasEl.addEventListener('change', () => {
-      updateSpec();
-      updateSpekTabel();
-    });
+    luasEl.addEventListener('change', updateSpec);
     suhuEl.addEventListener('input', updateFaktor);
     alatEl.addEventListener("input", hitungHasil);
+    alatSatuanEl.addEventListener("change", hitungHasil);
     document.getElementById("panjang").addEventListener("input", hitungHasil);
 
     document.getElementById("btn-laporan").addEventListener("click", () => {
@@ -701,6 +757,7 @@
         alert("Belum ada pengujian yang disimpan dalam laporan.");
         return;
       }
+
       let isiLaporan = `Laporan Perhitungan Resistansi Konduktor\n`;
       isiLaporan += `Total Pengujian: ${laporanPengujian.length}\n\n`;
 
@@ -709,8 +766,8 @@
         isiLaporan += `Tanggal: ${uji.tanggal}\n`;
         isiLaporan += `Jam   : ${uji.jam}\n\n`;
         isiLaporan += `Input:\n`;
-        isiLaporan += `- Pembacaan Alat: ${uji.alat} Ω\n`;
-        isiLaporan += `- Panjang (Feet): ${uji.panjang}\n`;
+        isiLaporan += `- Pembacaan Alat: ${uji.alat} ${uji.alatSatuan}\n`;
+        isiLaporan += `- Panjang (Meter): ${uji.panjang}\n`;
         isiLaporan += `- Suhu (°C): ${uji.suhu}\n`;
         isiLaporan += `- Faktor Koreksi Suhu: ${uji.faktor}\n\n`;
         isiLaporan += `Data Konduktor:\n`;
@@ -718,7 +775,7 @@
         isiLaporan += `- Penampang: ${uji.luas}\n`;
         isiLaporan += `- Spesifikasi Standar: ${uji.spesifikasi}\n\n`;
         isiLaporan += `Hasil Perhitungan:\n`;
-        isiLaporan += `- Resistansi (Ω/feet): ${uji.hasil}\n`;
+        isiLaporan += `- Resistansi (Ω/km): ${uji.hasil}\n`;
         isiLaporan += `- Status Pengujian: ${uji.status}\n\n`;
       });
 
@@ -747,10 +804,9 @@
 
     window.addEventListener('DOMContentLoaded', () => {
       bahanEl.value = "CU";
-      luasEl.value = "8";
+      luasEl.value = "0.5";
       updateSpec();
       updateFaktor();
-      updateSpekTabel();
       alatEl.focus();
       showGreetingHint();
       collapseInfoArea();
